--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,11 @@
 <head> 
     <meta charset="utf-8">   
     <title>Login Form</title>   
-    <link rel="stylesheet" type="text/css" href="/css/style.css" /> 
+    <link rel="stylesheet" type="text/css" href="../css/style.css" /> 
       
 </head>    
 <body>    
-    <h2>Login Page</h2><br>    
+    <h2 class="tittle">Login Page</h2><br>    
     <div class="login-box">    
     <form class="login" >    
         <label><b>User Name     
@@ -20,7 +20,7 @@
         </label>    
         <input type="Password" name="Pass" id="Pass" placeholder="Password">    
         <br><br>    
-        <input type="button" onclick="location.href= '/html/loginPage.html'" value="Login"> 
+        <input class="button" type="button" onclick="location.href= '../html/loginPage.html'" value="Login"> 
         <br><br> 
        <!-- <a href="/html/loginPage.html"> <input type="button" value="Login"></a> -->    
       <!-- <div id="button"><a href="/html/loginPage.html">LogIn</a></div>-->
