--- a/html/loginPage.html
+++ b/html/loginPage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>    
 <html>    
 <head>    
-    <title>Login Page</title>     
+    <title>Login Page</title> 
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />     
 </head> 
 
-<body>
- <h1> <b>you have successfully logged in</b></h1>
+<body class="body">
+ <h1 class="message"> <b>you have successfully logged in</b></h1>
 
 </body>
